# hocuspocu-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-01-fragment-message-chunking.md
docs/superpowers/specs/: 2026-06-01-fragment-message-chunking-design.md
hocuspocu-rs/: Cargo.toml  README.md
hocuspocu-rs-common/: Cargo.toml  README.md
hocuspocu-rs-common/src/: lib.rs
hocuspocu-rs/examples/: server.rs
hocuspocu-rs/src/: client_connection.rs  connection.rs  direct_connection.rs  document.rs  fragment.rs  hocuspocus.rs  lib.rs  message_receiver.rs  outgoing_message.rs  server.rs  types.rs
hocuspocu-rs/src/util/: debounce.rs  mod.rs
hocuspocu-rs/tests/: basic_test.rs  integration_test.rs  wire_protocol_test.rs
hocuspocus-common/: Cargo.toml
hocuspocus-common/src/: auth.rs  awareness_states.rs  close_events.rs  lib.rs  routing_key.rs  skip_further_hooks_error.rs  types.rs
hocuspocus-server/: Cargo.toml
hocuspocus-server/src/: client_connection.rs  connection.rs  direct_connection.rs  document.rs  encoding.rs  hocuspocus.rs  incoming_message.rs  lib.rs  message_receiver.rs  outgoing_message.rs  server.rs  types.rs
hocuspocus-server/tests/: basic_test.rs  integration_test.rs  wire_protocol_test.rs
interop/: README.md  bench_client.mjs  js_server.mjs  large_doc_test.mjs  multi_user_interop.mjs  package-lock.json  package.json  persistence_test.mjs  run_bench.sh  stress.sh  verify_stress.sh
provider/: EventEmitter.ts  FragmentBuffer.ts  HocuspocusProvider.ts  HocuspocusProviderWebsocket.ts  IncomingMessage.ts  MessageReceiver.ts  MessageSender.ts  OutgoingMessage.ts  index.ts  package-lock.json  package.json  tsconfig.json  types.ts
provider/OutgoingMessages/: AuthenticationMessage.ts  AwarenessMessage.ts  CloseMessage.ts  FragmentMessages.ts  QueryAwarenessMessage.ts  StatelessMessage.ts  SyncStepOneMessage.ts  SyncStepTwoMessage.ts  UpdateMessage.ts
provider/test/: fragment_interop.ts
