[package]
name = "hocuspocu-rs-common"
description = "Shared protocol types for hocuspocu-rs (a Rust port of @hocuspocus/common)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["yjs", "crdt", "collaboration", "websocket", "hocuspocus"]
categories = ["network-programming", "web-programming::websocket"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
