[package]
name = "hocuspocus-server"
version = "4.1.0"
edition = "2021"
description = "Rust port of @hocuspocus/server - real-time collaborative backend powered by Yjs/yrs"

[dependencies]
hocuspocus-common = { path = "../hocuspocus-common" }
yrs = "0.21"
tokio = { workspace = true }
tokio-tungstenite = "0.26"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
async-trait = "0.1"
bytes = "1"
tracing = "0.1"
http = "1"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
